# gravatar-web-api

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: main.rs
src/gravatar/: mod.rs
src/serde_visitor/: bool_form_string.rs  mod.rs
src/web/: mod.rs  router.rs
src/web/route_handler/user/: get_avatar_in_gravatar.rs  get_user_info_by_gravatar.rs  mod.rs
