[package]
name = "gravatar-web-api"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-valid = "0.18.0"
dotenv = "0.15.0"
reqwest = "0.12.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.18.1", features = ["derive"] }
